# fastapi-pgvector

./: .gitignore  DEVELOPER.md  README.md  commands.md  pyproject.toml
server/: .env.example  main.py
server/alembic/: env.py
server/alembic/versions/: 090625219dc2_test.py  a97a7c1757fa_convert_ids_to_uuid.py  df1f8b72d89f_baseline.py
server/app/core/: config.py  database.py  exceptions.py
server/app/models/: __init__.py  models.py
server/app/routes/: __init__.py  chats.py  documents.py  messages.py  users.py
server/app/schemas/: __init__.py  schemas.py
